# cosmwasm-simulator

./: .gitignore  Cargo.toml  run_simulation.sh
backend/: index.ts  package-lock.json  package.json  simulate.ts  tsconfig.json
data/: exec.json  instantiate.json  query.json
frontend/: index.html  package-lock.json  package.json
frontend/public/schema/: increment_msg.json  reset_msg.json
frontend/public/schema/cw20_base/: execute_msg.json
frontend/public/schema/cw_tpl_osmosis/: query_msg.json
frontend/public/simulations/: latest_counter_increment.json
frontend/src/: App.tsx  CustomFieldTemplate.tsx  SchemaForm.tsx  SimulationViewer.tsx
frontend/src/hooks/: useContracts.ts
simulations/cw_tpl_osmosis/increment/: exec_msg.json
simulations/cw_tpl_osmosis/reset/: exec_msg.json
src/: fork_loader.rs  lib.rs  main.rs  output.rs  simulator.rs
src/scenarios/: counter_fork.rs  helpers.rs  transfer_diff.rs
