[package]
name = "cosmwasm-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.5"
cosmwasm-vm = "1.5"
anyhow = "1.0"
base64ct = "=1.7.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }
# For base64 decoding keys/values from REST
base64 = "0.21"
once_cell = "1.21.3"
